content/_generated-doc/3.15/config/quarkus-core_quarkus.builder.adoc
:summaryTableId: quarkus-core_quarkus-builder
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a| [[quarkus-core_quarkus-builder-graph-output]] [.property-path]##link:#quarkus-core_quarkus-builder-graph-output[`quarkus.builder.graph-output`]##

[.description]
--
Dump the graph output to a file. This is useful for debugging.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDER_GRAPH_OUTPUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDER_GRAPH_OUTPUT+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-builder-log-conflict-cause]] [.property-path]##link:#quarkus-core_quarkus-builder-log-conflict-cause[`quarkus.builder.log-conflict-cause`]##

[.description]
--
Whether to log the cause of a conflict.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDER_LOG_CONFLICT_CAUSE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDER_LOG_CONFLICT_CAUSE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

|===


:!summaryTableId: