content/_generated-doc/3.40/config/quarkus-core_quarkus.builder.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a| [[quarkus-core_quarkus-builder-graph-output]] [.property-path]##link:#quarkus-core_quarkus-builder-graph-output[`+++quarkus.builder.graph-output+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.builder.graph-output+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Dump the graph output to a file. This is useful for debugging.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDER_GRAPH_OUTPUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDER_GRAPH_OUTPUT+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-core_quarkus-builder-log-conflict-cause]] [.property-path]##link:#quarkus-core_quarkus-builder-log-conflict-cause[`+++quarkus.builder.log-conflict-cause+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.builder.log-conflict-cause+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether to log the cause of a conflict.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDER_LOG_CONFLICT_CAUSE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDER_LOG_CONFLICT_CAUSE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-core_quarkus-builder-metrics-enabled]] [.property-path]##link:#quarkus-core_quarkus-builder-metrics-enabled[`+++quarkus.builder.metrics.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.builder.metrics.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If set to true then dump the build metrics to a JSON file in the build directory.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDER_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDER_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-core_quarkus-builder-metrics-extended-capture]] [.property-path]##link:#quarkus-core_quarkus-builder-metrics-extended-capture[`+++quarkus.builder.metrics.extended-capture+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.builder.metrics.extended-capture+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If set to true then the collection of metrics is enhanced but the size of the generated JSON file may grow significantly.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BUILDER_METRICS_EXTENDED_CAPTURE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BUILDER_METRICS_EXTENDED_CAPTURE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

|===

